
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_long ;
typedef char u_char ;
struct in_addr {int s_addr; } ;
struct hostent {int h_length; int h_addr; } ;


 int bcopy (int ,char*,int ) ;
 int exit (int) ;
 struct hostent* gethostbyname (char*) ;
 int inet_addr (char*) ;
 int printf (char*,char*) ;

u_long resolve_address(u_char *host)
{
struct in_addr addr;
struct hostent *he;

if((addr.s_addr = inet_addr(host)) == -1) {
if (!(he = gethostbyname(host))) {
printf("Unknown address: %s\n", host);
exit(-1);
}
bcopy(he->h_addr, (char *)&addr.s_addr, he->h_length);
}
return(addr.s_addr);
}
